# modorganizer-game_fallout4

./: CMakeLists.txt
include/game_fallout4/: fallout4dataarchives.h  fallout4gameplugins.h  fallout4savegame.h  fallout4savegameinfo.h  fallout4scriptextender.h  fallout4unmanagedmods.h  gamefallout4.h
src/: fallout4dataarchives.cpp  fallout4gameplugins.cpp  fallout4savegame.cpp  fallout4savegameinfo.cpp  fallout4scriptextender.cpp  fallout4unmanagedmods.cpp  gamefallout4.cpp
